# formai-sample

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
checkpoints/: INDEX.md
checkpoints/20260317_010138_formai_field_detection_checkpoint/: MANIFEST.md  artifacts.json
checkpoints/20260317_012014_formai_multiline_split_v2_checkpoint/: MANIFEST.md  artifacts.json
checkpoints/20260317_170326_formai_real_pipeline_demo_checkpoint/: MANIFEST.md  artifacts.json
checkpoints/20260317_185321_formai_readable_fit_checkpoint/: MANIFEST.md  artifacts.json
checkpoints/20260317_201644_formai_multiline_v17_checkpoint/: MANIFEST.md  artifacts.json
checkpoints/20260317_215310_formai_same_page_note_v22_checkpoint/: MANIFEST.md  artifacts.json
checkpoints/20260317_232512_formai_natural_form_polish_v23_checkpoint/: MANIFEST.md  artifacts.json
checkpoints/20260318_192107_formai_pre_api_release_ready_checkpoint/: MANIFEST.md  artifacts.json
checkpoints/20260323_230230_formai_api_workbench_checkpoint/: MANIFEST.md  artifacts.json
docs/: README.md  agent-implementation-guide.md  api-and-jobs.md  overview.md
docs/architecture/: repo-layout.md  (+2 more)
scripts/: check_bounding_boxes.py  check_fillable_fields.py  convert_pdf_to_images.py  extract_form_field_info.py  extract_form_structure.py
tests/: __init__.py  fakes.py  fixture_factory.py  test_benchmarks.py  test_cli.py  test_heuristic_detector.py  test_mapping.py  test_pipeline_integration.py  test_roadmap_features.py  test_runner_architecture.py  test_segmentation.py
web/: package-lock.json  package.json
(+125 files in other folders)
